application/static/css/general.css
* {
    margin: 0;
    padding: 0;
}

.wrapper {
    height: 100vh;
}

nav {
    height: 100vh;
    border: 0 solid #bbb;
    border-right-width: 1px;
    font-size: 10pt;
    text-align: left;
    overflow-y: auto;
    background-color: #fff;
}

section {
    /* Positions section to left of nav */
    overflow: hidden;
    height: 100vh;
    position: relative;
}

.diagram {
    position: absolute;
    top: 50px;
    bottom: 0;
    width: 100%;
}

.bar {
    /* stick search to the top */
    width: 100%;
    /* place the bar at the top of the parent at all times */
    top: 0;
    z-index: 100;
    height: 50px;
    line-height: 50px;
    border-bottom: 1px solid #bbb;
}

.bar button {
    display: inline;
}

.search {
    width: 40%;
    float:left;
    text-align: center;
}

.button {
    background-color: #f44336;
    color: white;
    border: none;
    border-radius: 10em;
    margin: 6px;
    transition: box-shadow 0.2s ease;
}

#buttons {
    width: 40%;
    float:left;
    margin: 8px 0px 0px 0px;
}
#searchbar{
    margin-left: auto;
    margin-right: auto;
    display: inline-block;
    width: auto;
}

.profile{
    width: 80px;
}

.langFlag {
    width: 24px;
    height: 24px;
    margin-right: 3px;
}

.langFlagHeader {
    width: 24px;
    height: 24px;
}

#language{
    padding: 4px 12px;
}

.flagButton {
    padding: 4px 5px 3px 6px;
}

.dropdown-menu {
    min-width: 50px;
}

.logotype {
    width: 120px;
    height: 30px;
    float: left;
    margin-top: 11px;
    margin-left: 8px;
}

